--- a/client/src/components/featuredProperties/featuredProperties.css
+++ b/client/src/components/featuredProperties/featuredProperties.css
@@ -8,24 +8,34 @@
 }
 
 .fpItem{
-  
+  height: 420px;
   flex: 1;
-  gap: 10px;
+  gap: 5px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   width: 1140px;
+  align-items: center;
+  border: 1px solid rgb(222, 216, 216);
+  
+}
+
+.fpItem hr {
+  width: 276px;
 }
 
 .fpImg{
   width: 100%;
-  height: 250px;
+  height: 150px;
   object-fit: cover;
 }
 
 .fpName{
+  font-size: 30px;
+  font-family: "Playfair Display", Arial, serif;
   color: #333;
-  font-weight: bold;
+  font-weight: 600;
+  margin-top: 20px;
 }
 
 .fpCity{
@@ -33,7 +43,11 @@
 }
 
 .fpPrice{
+  font-size: 20px;
   font-weight: 500;
+  margin-right: 5px;
+  margin-bottom: 20px;
+  border-bottom: 3px solid orange;
 }
 
 .fpRating>button{
@@ -47,4 +61,9 @@
 
 .fpRating>span{
   font-size: 14px;
+}
+
+.detail {
+  font-size: 20px;
+  margin-top: 10px;
 }
