--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #f21f14d8;
+  background-color: #8D703B;
   color: white;
   display: flex;
   justify-content: center;
