--- a/client/src/components/propertyList/propertyList.css
+++ b/client/src/components/propertyList/propertyList.css
@@ -1,30 +1,29 @@
-.pList{
+.property{
   width: 100%;
   max-width: 1024px;
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  z-index: 1;
 }
 
-.pListItem{
-  flex:1;
+.propertyItem{
+  position: relative;
+  color: white;
   border-radius: 10px;
   overflow: hidden;
-  cursor: pointer;
+  height: 150px;
+  flex:1
 }
 
-.pListImg{
+.propertyImg{
   width: 100%;
-  height: 150px;
+  height: 100%;
   object-fit: cover;
 }
 
-.pListTitles>h1{
-  font-size: 18px;
-  color: #444;
-}
-
-.pListTitles>h2{
-  font-size: 14px;
-  font-weight: 300;
+.propertyTitles{
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
 }
