--- a/client/src/components/mailList/mailList.css
+++ b/client/src/components/mailList/mailList.css
@@ -1,7 +1,7 @@
 .mail{
   width: 100%;
   margin-top: 50px;
-  background-color: #8D703B;
+  background-color: #f21f14d8;
   color: white;
   display: flex;
   flex-direction: column;
