--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,7 +1,7 @@
 .navbar{
   height: 50px;
   /* background-color: #003580; */
-  background-color: #8D703B;
+  background-color: #f21f14d8;
   display: flex;
   justify-content: center;
 }
