--- a/client/src/components/propertyList/propertyList.css
+++ b/client/src/components/propertyList/propertyList.css
@@ -1,29 +1,30 @@
-.property{
+.pList{
   width: 100%;
   max-width: 1024px;
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  z-index: 1;
 }
 
-.propertyItem{
-  position: relative;
-  color: white;
+.pListItem{
+  flex:1;
   border-radius: 10px;
   overflow: hidden;
-  height: 150px;
-  flex:1
+  cursor: pointer;
 }
 
-.propertyImg{
+.pListImg{
   width: 100%;
-  height: 100%;
+  height: 150px;
   object-fit: cover;
 }
 
-.propertyTitles{
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
+.pListTitles>h1{
+  font-size: 18px;
+  color: #444;
+}
+
+.pListTitles>h2{
+  font-size: 14px;
+  font-weight: 300;
 }
