--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -13,10 +13,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-size: larger;
+  font-weight: 600;
 }
 
 .logo{
   font-weight: 500;
+  font-size: larger;
 }
 
 .navButton{
