--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -3,8 +3,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url('../../assets/images/login-background.jpg');
+    background-size: cover;
   }
   
+  .register-container {
+    width: 400px;
+    height: 700px;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px ;
+    
+  }
+
+  input {
+    margin: 5px 0 5px 0;
+  }
+
   .rContainer {
     display: flex;
     flex-direction: column;
