--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -3,11 +3,29 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url('../../assets/images/login-background.jpg');
+    background-size: cover;
+  }
+
+  .login-container {
+    width: 400px;
+    height: 500px;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px ;
+    
   }
   
+  h1 {
+    font-size: 50px;
+  }
+
   .lContainer {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
   }
   
