--- a/client/src/pages/home/home.css
+++ b/client/src/pages/home/home.css
@@ -6,6 +6,14 @@
   gap: 30px;
 }
 
+.homeContainer2{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  background-color: #232323;
+}
+
 .homeTitle{
   width: 1024px;
   font-size: 20px;
