--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -2,6 +2,10 @@
   width: 100%;
   width: 1024px;
   font-size: 12px;
+  background-color: #232323;
+  padding:100px 100px 100px 100px;
+  background-size: full;
+  font-size: 16px;
 }
 
 .fLists{
@@ -18,6 +22,6 @@
 
 .fListItem{
   margin-bottom: 10px;
-  color: #f21f14d8;
+  color: #ffffff;
   cursor: pointer;
 }
