--- a/admin/src/pages/login/login.scss
+++ b/admin/src/pages/login/login.scss
@@ -3,8 +3,20 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-image: url('https://images.pexels.com/photos/1024967/pexels-photo-1024967.jpeg');
+    background-size: cover;
   }
   
+  .login-container {
+    width: 400px;
+    height: 500px;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px ;
+  }
+
   .lContainer {
     display: flex;
     flex-direction: column;
