--- a/admin/src/pages/login/login.scss
+++ b/admin/src/pages/login/login.scss
@@ -17,6 +17,10 @@
     border-radius: 15px ;
   }
 
+  h1 {
+    font-size: 50px;
+  }
+  
   .lContainer {
     display: flex;
     flex-direction: column;
